--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                                 <input type="date" class="form-control" id="fechaCreacion">
                             </div>
                         </div>
+                        <div class="model-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type = "button" class="btn btn-primary" id = "btnConfirmarAgregar">Agregar</button>
+                        </div>
                     </form>
                 </div>
             </div>
